modify vercel json rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {  
   "rewrites": [
-       { "source": "/locations/:match*",
-         "destination": "https://geodata.gov.hk/gs/api/v1.0.0/:match*"
+       { "source": "/locations/:path(.*)",
+         "destination": "https://geodata.gov.hk/gs/api/v1.0.0/:path(.*)"
        } 
  ]
 }
