modify vercel json rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "rewrites": [
     {
-      "source": "/locations/:path(.*)",
-      "destination": "https://geodata.gov.hk/gs/api/v1.0.0/:path(.*)"
+      "source": "/locations/:match*",
+      "destination": "https://geodata.gov.hk/gs/api/v1.0.0/:match*"
     }
   ]
 }
