edit vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
-  "version": 2,
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "rewrites": [
-    {
-      "source": "/locations/:path*",
-      "destination": "https://geodata.gov.hk/gs/api/v1.0.0/:path*"
-    }
-  ],
-  "framework": "vite",
-  "buildCommand": "vite build",
-  "outputDirectory": "dist"
+    "rewrites": [
+        {
+            "source": "/locations/(.*)",
+            "destination": "https://geodata.gov.hk/gs/api/v1.0.0/$1"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/"
+        }
+    ]
 }
