--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
-    "rewrites": [
-        {
-            "source": "/locations/(.*)",
-            "destination": "https://geodata.gov.hk/gs/api/v1.0.0/$1"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/"
-        }
-    ]
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "rewrites": [
+    {
+      "source": "/locations/:path*",
+      "destination": "https://geodata.gov.hk/gs/api/v1.0.0/:path*"
+    }
+  ]
 }
