--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "@types/express": "^5.0.3",
+    "@vercel/react-router": "^1.2.1",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
